--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 output/
 
+# Source files extracted from literate documentation.
+rasmodel/components/
+
 # Ignore Sphinx build files
 doc/_build
 doc/_static
