Refactor into compoments/scenarios/experiments

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@ output/
 
 # Source files extracted from literate documentation.
 rasmodel/components/
+rasmodel/experiments/
+rasmodel/scenarios/
 
 # Ignore Sphinx build files
 doc/_build
